# contomap

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  build.sh  toolchain-mingw.cmake
.github/workflows/: codeql.yml  lint.yml  main-build.yml
application/src/cpp/: Application.cpp
application/src/h/contomap/application/: Application.h
editor/src/cpp/: Editor.cpp  Selection.cpp  Selections.cpp  Styles.cpp  VersionInfo.cpp  VersionInfoGlobal.cpp.in  ViewScope.cpp
editor/src/h/contomap/editor/: Editor.h  InputRequestHandler.h  SelectedType.h  Selection.h  SelectionAction.h  SelectionMode.h  Selections.h  Styles.h  VersionInfo.h  View.h  ViewModel.h  ViewScope.h
editor/test/: EditorTest.cpp  SelectionFixture.cpp  SelectionFixture.h  VersionInfoTest.cpp  ViewScopeFixture.cpp  ViewScopeFixture.h  placeholder.cpp
frontend/src/cpp/: DirectMapRenderer.cpp  EditBuffer.cpp  Focus.cpp  FocusInterceptor.cpp  FrameTime.cpp  Geometry.cpp  HelpDialog.cpp  LoadDialog.cpp  LocateTopicAndActDialog.cpp  MainWindow.cpp  MapCamera.cpp  MapRenderList.cpp  MapRenderMeasurer.cpp  Names.cpp  NewOccurrenceDialog.cpp  NewTopicDialog.cpp  RenameTopicDialog.cpp  RenderContext.cpp  SaveAsDialog.cpp  StyleDialog.cpp
frontend/src/h/contomap/frontend/: Colors.h  Dialog.h  DirectMapRenderer.h  DisplayEnvironment.h  EditBuffer.h  Focus.h  FocusInterceptor.h  FrameTime.h  Geometry.h  HelpDialog.h  Layout.h  LoadDialog.h  LocateTopicAndActDialog.h  MainWindow.h  MapCamera.h  MapRenderList.h  MapRenderMeasurer.h  MapRenderer.h  Names.h  NewOccurrenceDialog.h  NewTopicDialog.h  RenameTopicDialog.h  RenderContext.h  SaveAsDialog.h  StyleDialog.h  ViewModelState.h
frontend/test/: FrameTimeTest.cpp  GeometryTest.cpp  ImmediateGearboxTest.cpp  MapCameraTest.cpp  NamesTest.cpp  SmoothGearboxTest.cpp
infrastructure/src/cpp/: BinaryDecoder.cpp  BinaryEncoder.cpp  Decoder.cpp  Encoder.cpp
infrastructure/src/h/contomap/infrastructure/: Generator.h  Link.h  LinkedReferences.h  Referable.h  Traits.h
infrastructure/src/h/contomap/infrastructure/serial/: BinaryDecoder.h  BinaryEncoder.h  Coder.h  Decoder.h  Encoder.h
infrastructure/test/: BinaryDecoderTest.cpp  BinaryEncoderTest.cpp  DecoderTest.cpp  EncoderTest.cpp  GeneratorTest.cpp  LinkTest.cpp  LinkedReferencesTest.cpp
infrastructure/test-support/cpp/: RandomSamples.cpp
infrastructure/test-support/h/contomap/test/: Steps.h
infrastructure/test-support/h/contomap/test/samples/: RandomSamples.h
main-desktop/: main.cpp
main-wasm/: main.cpp
model/src/cpp/: Association.cpp  Associations.cpp  Contomap.cpp  Coordinates.cpp  Identifier.cpp  Identifiers.cpp  Occurrence.cpp  OptionalIdentifier.cpp  Role.cpp  Scoped.cpp  SpacialCoordinate.cpp  Style.cpp  Topic.cpp  TopicFilter.cpp  TopicName.cpp  TopicNameValue.cpp  Topics.cpp  Typeable.cpp
model/src/h/contomap/model/: Association.h  Associations.h  Contomap.h  ContomapView.h  Coordinates.h  Filter.h  Identifiable.h  Identifier.h  Identifiers.h  Occurrence.h  OptionalIdentifier.h  Reifiable.h  Reified.h  Reifier.h  Role.h  Scoped.h  SpacialCoordinate.h  Style.h  Styleable.h  Topic.h  TopicFilter.h  TopicName.h  TopicNameValue.h  Topics.h  Typeable.h
model/test/: AssociationTest.cpp  ContomapTest.cpp  IdentifierTest.cpp  IdentifiersTest.cpp  OccurrenceTest.cpp  OptionalIdentifierTest.cpp  ReifiableTest.cpp  TopicNameTest.cpp  TopicNameValueTest.cpp  TopicTest.cpp
model/test-support/cpp/: ContomapViewFixture.cpp  CoordinateSamples.cpp  ScopeSamples.cpp  TopicNameSamples.cpp  TopicSamples.cpp  model.cpp
model/test-support/h/contomap/test/fixtures/: ContomapViewFixture.h
model/test-support/h/contomap/test/matchers/: Coordinates.h  Topics.h
model/test-support/h/contomap/test/printers/: model.h
model/test-support/h/contomap/test/samples/: CoordinateSamples.h  ScopeSamples.h  TopicNameSamples.h  TopicSamples.h
